# bentu404-cursors

./: .gitignore  README.md  flake.nix  overrides.json  pyproject.toml  result
cursors/: download_tracking.json
previews/: README.md
src/bentu404_cursors/: __init__.py  convertcursors.py  download_cursors.py  downloadcursors.py  generatepreviews.py  nix_store_add.py  png2svg.py
